# rede-social-eventos

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup_env.py  tailwind.config.js
ond/: asgi.py  settings.py  urls.py  wsgi.py
ond_eventos/: apps.py  dominio.py  urls_evento.py  urls_ond_hj.py
ond_eventos/componentes/: __init__.py  card_ondevento.py  paginador.py  pilula_status_evento.py  pilula_tipo_evento.py
ond_eventos/forms/: __init__.py  criar_ond_evento_form.py  ond_hj_form.py  utils.py
ond_eventos/migrations/: 0001_initial.py  0002_initial.py
ond_eventos/models/: __init__.py  cidade.py  ondevento.py
ond_eventos/views/: __init__.py  comentarios_do_ondevento.py  criar_ondevento_view.py  editar_ondevento.py  home.py  home_do_ondevento_view.py  ond_e_hoje.py  select_cidade_view.py
ond_notificacao/: apps.py  urls.py
ond_notificacao/componentes/: __init__.py  card_notificacao.py  icon_notificacao.py
ond_notificacao/migrations/: 0001_initial.py  0002_initial.py
ond_notificacao/models/: __init__.py  atividade.py
ond_notificacao/views/: __init__.py  marcar_notificacao_como_visto.py  marcar_todas_notificacoes_como_visto.py  minhas_notificacoes.py  verificar_notificacao_header.py
ond_perfil/: admin.py  apps.py  backend.py  contas_urls.py  models.py  tests.py  urls.py
ond_social/: apps.py  urls.py
utils_teste/: datas.py  recipes.py
widgets/: __init__.py  date_input.py  email_input.py  file_input.py  password_input.py  radio_select.py  search_input.py  select.py  select_multiple.py  text_area.py  text_input.py  time_input.py
(+139 files in other folders)
